<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background"
    android:orientation="vertical">

    <com.maureen.yishenghuo.ui.TitleBar
        android:id="@+id/water_titlebar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/TitleBar"
        android:background="@drawable/title_background"
        android:paddingEnd="10dp"
        android:paddingStart="10dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="18dp">

        <TextView
            android:id="@+id/water_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableStart="@drawable/ic_water"
            android:text="@string/service_water_fee"
            android:textSize="24sp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:padding="18dp">

        <TextView
            android:id="@+id/water_tv_organization"
            style="@style/charge_list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/organization" />

        <TextView
            android:id="@+id/water_tv_company"
            style="@style/charge_list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/electric_tv_organization"
            android:layout_alignParentEnd="true"
            android:text="@string/company" />

        <TextView
            android:id="@+id/water_tv_ID"
            style="@style/charge_list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/water_tv_organization"
            android:text="@string/charge_ID" />

        <TextView
            android:id="@+id/water_tv_id"
            style="@style/charge_list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/water_tv_ID"
            android:layout_alignParentEnd="true"
            android:text="@string/charge_id" />

        <TextView
            android:id="@+id/water_tv_NAME"
            style="@style/charge_list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/water_tv_ID"
            android:text="@string/charge_NAME" />

        <TextView
            android:id="@+id/water_tv_name"
            style="@style/charge_list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/water_tv_NAME"
            android:layout_alignParentEnd="true"
            android:text="@string/charge_name" />

        <TextView
            android:id="@+id/water_tv_address"
            style="@style/charge_list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/water_tv_NAME"
            android:text="@string/address" />

        <TextView
            android:id="@+id/water_tv_address_info"
            style="@style/charge_list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/water_tv_address"
            android:layout_alignParentEnd="true"
            android:text="@string/address_info" />

        <TextView
            android:id="@+id/water_tv_arrears"
            style="@style/charge_list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/water_tv_address"
            android:text="@string/arrears" />

        <TextView
            android:id="@+id/water_tv_arrears_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/water_tv_arrears"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:text="@string/arrears_account"
            android:textSize="18sp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/water_tv_recharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/recharge"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/water_edt_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:gravity="center"
            android:hint="@string/recharge_money"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/water_btn_pay"
        android:layout_width="245dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn_shape"
        android:text="@string/pay_now"
        android:textColor="@color/white"
        android:textSize="23sp" />

</LinearLayout>

