<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/page_background"
              android:orientation="vertical">

    <com.yishenghuo.yishenghuo.ui.weiget.TitleBar
        android:id="@+id/gas_titlebar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar"
        android:background="@drawable/title_background"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="18dp">

        <TextView
            android:id="@+id/gas_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableStart="@drawable/ic_fuelgas"
            android:text="@string/service_gas_fee"
            android:textSize="24sp"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:padding="18dp">

        <TextView
            android:id="@+id/gas_tv_organization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/organization"
            style="@style/charge_list_text"/>

        <TextView
            android:id="@+id/gas_tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/electric_tv_organization"
            android:text="@string/company"
            style="@style/charge_list_text"/>

        <TextView
            android:id="@+id/gas_tv_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gas_tv_organization"
            android:text="@string/charge_ID"
            style="@style/charge_list_text"/>

        <TextView
            android:id="@+id/gas_tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/gas_tv_ID"
            android:text="@string/charge_id"
            style="@style/charge_list_text"/>

        <TextView
            android:id="@+id/gas_tv_NAME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gas_tv_ID"
            android:text="@string/charge_NAME"
            style="@style/charge_list_text"/>

        <TextView
            android:id="@+id/gas_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/gas_tv_NAME"
            android:text="@string/charge_name"
            style="@style/charge_list_text"/>

        <TextView
            android:id="@+id/gas_tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gas_tv_NAME"
            android:text="@string/address"
            style="@style/charge_list_text"/>

        <TextView
            android:id="@+id/gas_tv_address_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/gas_tv_address"
            android:layout_alignParentEnd="true"
            android:text="@string/address_info"
            style="@style/charge_list_text"
            />

        <TextView
            android:id="@+id/gas_tv_arrears"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gas_tv_address"
            android:text="@string/arrears"
            style="@style/charge_list_text"
            />

        <TextView
            android:id="@+id/gas_tv_arrears_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/gas_tv_arrears"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:text="@string/arrears_account"
            android:textSize="18sp"/>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/electric_tv_recharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/recharge"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/electric_edt_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:gravity="center"
            android:hint="@string/recharge_money"
            android:textSize="18sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/electric_btn_pay"
        android:layout_width="245dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn_shape"
        android:layout_gravity="center_horizontal"
        android:text="@string/pay_now"
        android:textColor="@color/white"
        android:textSize="23sp"/>

</LinearLayout>

