<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background"
    android:orientation="vertical">

    <com.maureen.yishenghuo.ui.TitleBar
        android:id="@+id/entrance_titlebar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/TitleBar"
        android:background="@drawable/title_background"
        android:paddingEnd="10dp"
        android:paddingStart="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14sp"
        android:layout_marginTop="10sp"
        android:text="@string/guess_come1"
        android:textSize="18sp" />

    <Button
        android:id="@+id/entrance_btn_access"
        android:layout_width="160sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:background="@drawable/btn_shape"
        android:text="@string/guess_come2"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14sp"
        android:layout_marginTop="10sp"
        android:text="@string/gate"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/entrance_btn_main_door"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/btn_shape"
            android:text="@string/gate_introduce1"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/entrance_btn_aside_door"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            android:layout_marginStart="14sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/btn_shape"
            android:text="@string/gate_introduce2"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/entrance_btn_north_door"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/btn_shape"
            android:text="@string/gate_introduce3"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/entrance_btn_department_door"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            android:layout_marginStart="14sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/btn_shape"
            android:text="@string/gate_introduce4"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14sp"
        android:layout_marginTop="10sp"
        android:text="@string/passageway"
        android:textSize="18sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10sp"
        android:layout_marginTop="10sp"
        android:ems="12"
        android:text="@string/passageway2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14sp"
        android:layout_marginTop="10sp"
        android:text="@string/feedback"
        android:textSize="18sp" />

    <Button
        android:layout_width="160sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:background="@drawable/btn_shape"
        android:text="@string/door_feedback"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12sp"
        android:layout_marginRight="12sp"
        android:layout_marginTop="10sp"
        android:text="@string/warm_prompt" />


</LinearLayout>