<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background"
    android:orientation="vertical">

    <com.yishenghuo.yishenghuo.ui.TitleBar
        android:id="@+id/gas_apply_titlebar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/TitleBar"
        android:background="@drawable/title_background"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="14dp">

        <TextView
            android:id="@+id/gas_apply_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableStart="@drawable/ic_fuelgas"
            android:text="@string/service_gas_fee"
            android:textSize="24sp"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:padding="18dp">

        <TextView
            android:id="@+id/gas_apply_organization"
            style="@style/charge_list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/organization"/>

        <TextView
            android:id="@+id/gas_apply_company"
            style="@style/charge_list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/gas_apply_organization"
            android:layout_alignParentEnd="true"
            android:text="@string/company"/>

        <TextView
            android:id="@+id/gas_apply_ID"
            style="@style/charge_list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gas_apply_organization"
            android:text="@string/charge_ID"/>

        <EditText
            android:id="@+id/gas_apply_id"
            style="@style/charge_list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/gas_apply_ID"
            android:layout_alignParentEnd="true"
            android:textColor="#696969"
            android:text="@string/apply"/>

        <TextView
            android:id="@+id/property_apply_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/gas_apply_ID"
            android:layout_marginStart="15dp"
            android:text="@string/apply_username" />
    </RelativeLayout>



    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/protocol"
        />

    <Button
        android:id="@+id/gas_the_next"
        android:layout_width="245dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn_shape"
        android:text="@string/the_next"
        android:textColor="@color/white"
        android:textSize="23sp"/>

</LinearLayout>
